--- a/app/templates/admin/adminManageExam.html
+++ b/app/templates/admin/adminManageExam.html
@@ -12,23 +12,21 @@
     <div id="dashboardSection" style="width: 90%; margin:auto; padding:1%">
         <input type="hidden" name="form_type" value="dashboard">
         <div class="form-left" style="width: 100%">
-
-            <!-- Overview -->
             <div class="dashboard-row">
                 <div class="dashboard-frame pie">
                     <h3>Total Exams</h3>
                     <p class="dashboard-text">{{ exam_data|length }}</p>
                 </div>
                 <div class="dashboard-frame">
-                    <h3>Completed Exams</h3>
+                    <h3>Completed & Activated Exams</h3>
                     <p class="dashboard-text" style="color:green;">{{ complete_exam }}</p>
                 </div>
                 <div class="dashboard-frame">
-                    <h3>Exams with Errors</h3>
+                    <h3>Incomplete but Activated Exams</h3>
                     <p class="dashboard-text" style="color:red;">{{ exam_data|length - complete_exam - unassigned_exam }}</p>
                 </div>
                 <div class="dashboard-frame">
-                    <h3>Exams Not Created Yet</h3>
+                    <h3>Unassigned Activated Exams</h3>
                     <p class="dashboard-text" style="color:red;">{{ unassigned_exam }}</p>
                 </div>
                 <div class="dashboard-frame">
@@ -215,13 +213,7 @@
                             {% endif %}
                         </td>
 
-                        <td>
-                            {% if row.examNoInvigilator == 0 %}
-                                <span class="status frame-red">Error: No Invigilator Assigned!</span>
-                            {% else %}
-                                [{{ row.examNoInvigilator }}]
-                            {% endif %}
-                        </td>
+                        <td>[{{ row.examNoInvigilator }}]</td>
                     </tr>
                 {% endfor %}
             </tbody>
