--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -53,20 +53,21 @@
             <h4 style="text-align: center;">File Upload Section</h4>
             <label for="timetable_list">
                 <div class="upload-container" style="width: 80%;" id="timetableUploadContainer">
-                <div class="upload-text">
-                    Please upload your timetable files in <b>PDF format only</b>.<br><br>
-                    You may click below to upload or drag and drop your files here.<br><br>
-                    <b>Note:</b> Upload <u>one timetable per PDF file</u>. Multiple files are allowed, but <u>merged PDFs containing multiple timetables in a single file are not supported</u>.<br>
-                    For example:<br>
-                    - ✅ 10 files with 1 timetable each → OK<br>
-                    - ❌ 1 file with 10 timetables → Not allowed
-                </div><br>
-                <div id="timetableSelectedFileName" class="file-name-display"></div>
+                    <div class="upload-text">
+                        Please upload your timetable files in <b>PDF format only</b>.<br><br>
+                        You may click below to upload or drag and drop your files here.<br>
+                        <b>Note:</b> Upload <u>one timetable per PDF file</u>. Multiple files are allowed,<br>
+                        but <u>merged PDFs containing multiple timetables in a single file are not supported</u>.<br>
+                        For example:<br>
+                        - ✅ 10 files with 1 timetable each → OK<br>
+                        - ❌ 1 file with 10 timetables → Not allowed
+                    </div><br>
+                    <div id="timetableSelectedFileName" class="file-name-display"></div>
+                </div>
             </label>
             <input type="file" id="timetable_list" name="timetable_file[]" accept=".pdf" style="display: none;" multiple>
             <input type="hidden" name="form_type" value="upload">
             <br>
-
             <div class="button-wrapper">
                 <button type="submit" id="uploadButton">Upload Lecturer Timetable</button>
             </div>
