--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -56,9 +56,9 @@
                     <div class="upload-text">
                         Please upload your timetable files in <b>PDF format only</b>.<br><br>
                         You may click below to upload or drag and drop your files here.<br>
-                        <b>Note:</b> Upload <u>one timetable per PDF file</u>. Multiple files are allowed,<br>
-                        but <u>merged PDFs containing multiple timetables in a single file are not supported</u>.<br>
-                        For example:<br>
+                        <b>Note:</b> Upload <i>one timetable per PDF file</i>. Multiple files are allowed,<br>
+                        but <i>merged PDFs containing multiple timetables in a single file are not supported</i>.<br><br>
+                        <b>For example:</b><br>
                         - ✅ 10 files with 1 timetable each → OK<br>
                         - ❌ 1 file with 10 timetables → Not allowed
                     </div><br>
