--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -57,10 +57,7 @@
                         Please upload your timetable files in <b>PDF format only</b>.<br><br>
                         You may click below to upload or drag and drop your files here.<br>
                         <b>Note:</b> Upload <i>one timetable per PDF file</i>. Multiple files are allowed,<br>
-                        but <i>merged PDFs containing multiple timetables in a single file are not supported</i>.<br><br>
-                        <b>For example:</b><br>
-                        - ✅ 10 files with 1 timetable each → OK<br>
-                        - ❌ 1 file with 10 timetables → Not allowed
+                        but <i>merged PDFs containing multiple timetables in a single file are not supported</i>.
                     </div><br>
                     <div id="timetableSelectedFileName" class="file-name-display"></div>
                 </div>
