--- a/app/templates/admin/adminManageExam.html
+++ b/app/templates/admin/adminManageExam.html
@@ -115,9 +115,12 @@
                 <select name="venue" id="editVenue" required>
                     <option value="" disabled selected>Select Exam Venue</option>
                     {% for venue in venue_data %}
-                        <option value="{{ venue.venueNumber }}">[Capacity: {{ venue.venueCapacity }}] - {{ venue.venueNumber }}</option>
+                        {% if venue.venueCapacity > selected_exam.course.courseStudent %}
+                            <option value="{{ venue.venueNumber }}">[Capacity: {{ venue.venueCapacity }}] - {{ venue.venueNumber }}</option>
+                        {% endif %}
                     {% endfor %}
                 </select><br>
+
 
                 <label>Exam Start Date & Time</label>
                 <div style="display: flex; gap: 2%;">
