--- a/app/templates/admin/adminManageExam.html
+++ b/app/templates/admin/adminManageExam.html
@@ -115,7 +115,7 @@
                 <select name="venue" id="editVenue" required>
                     <option value="" disabled selected>Select Exam Venue</option>
                     {% for venue in venue_data %}
-                        {% if venue.venueCapacity > selected_exam.course.courseStudent %}
+                        {% if venue.venueCapacity > exam_select.course.courseStudent %}
                             <option value="{{ venue.venueNumber }}">[Capacity: {{ venue.venueCapacity }}] - {{ venue.venueNumber }}</option>
                         {% endif %}
                     {% endfor %}
