--- a/app/templates/admin/adminManageInvigilationReport.html
+++ b/app/templates/admin/adminManageInvigilationReport.html
@@ -115,6 +115,7 @@
                                     <div>ID</div><div><strong>: {{ att.invigilator.userId }}</strong></div>
                                     <div>Name</div><div><strong>: {{ att.invigilator.userName }}</strong></div>
                                     <div>Contact</div><div><strong>: {{ att.invigilator.userContact }}</strong></div>
+                                    <div>Gender</div><div><strong>: {{ att.invigilator.userGender }}</strong></div>
                                 </div>
                             </td>
 
